# achievement_test_fp

./: Makefile  README.md  alembic.ini  docker-compose.yml  example.env  pyproject.toml
.github/workflows/: tests.yml
data/: data.sql
nginx/: Dockerfile  nginx.conf
src/app/adapter/: di.py
src/app/adapter/sqlalchemy_db/: __init__.py  connect.py
src/app/application/commands/: __init__.py  achievement.py  achievement_user.py  user.py
src/app/application/dto/: __init__.py  achievement.py  achievement_user.py  base.py  pagination.py  user.py
src/app/core/: __init__.py  config.py  constants.py  exceptions.py  log_config.py  stub.py  validators.py
src/app/domain/enums/: __init__.py  language.py
src/app/domain/exceptions/: __init__.py  achievement.py  user.py
src/app/domain/models/: __init__.py  achievement.py  achievement_id.py  achievement_user.py  user.py  user_id.py
src/app/domain/services/: __init__.py  achievement.py  achievement_user.py  user.py
src/app/main/: app.py
src/app/presentation/openapi/: __init__.py  add_achievement_user.py  create_achievement.py  get_achievements.py  get_achievements_user.py  get_max_achievement_points_user.py  get_max_achievements_user.py  get_user_info.py  get_users_with_days_streak.py  get_users_with_max_points_diff.py  get_users_with_min_points_diff.py
src/app/presentation/web/: __init__.py  achievement.py  user.py
tests/mocks/: achievement.py  achievement_users.py  uow.py  user.py
tests/unit/application/: conftest.py
tests/unit/application/commands/: test_add_achievement_user.py  test_create_achievement.py  (+8 more)
(+14 files in other folders)
