[build-system]
requires = ["setuptools>=66.0"]
build-backend = "setuptools.build_meta"

[project]
name = "app"
description = "Achievement Service"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Alexander Kuzmin", email = "funks.1@yandex.ru" }
]
dependencies = [
    "fastapi<=0.111.1",
    "sqlalchemy<=2.0.31",
    "alembic<=1.13.2",
    "asyncpg<=0.29.0",
    "emoji<=2.12.1",
    "structlog<=24.4.0"
]

[project.optional-dependencies]
dev = [
    "pytest<=8.2.0",
    "pytest-asyncio<=0.23.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
